<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_wireframe_bg"
        android:padding="@dimen/dp10">

        <TextView
            android:id="@+id/adapter_activityselectbusiness_item_tv_businessnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/BusinessNumber"
            android:textColor="@color/Title_Color"
            android:textSize="@dimen/sp16"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adapter_activityselectbusiness_item_tv_goodsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/GoodsName"
            android:textColor="@color/Title_Color"
            android:textSize="@dimen/sp16"
            app:layout_constraintTop_toBottomOf="@id/adapter_activityselectbusiness_item_tv_businessnumber" />

        <TextView
            android:id="@+id/adapter_activityselectbusiness_item_tv_deliveryaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/DeliveryAddress"
            android:textColor="@color/Title_Color"
            android:textSize="@dimen/sp16"
            app:layout_constraintTop_toBottomOf="@id/adapter_activityselectbusiness_item_tv_goodsname" />

        <TextView
            android:id="@+id/adapter_activityselectbusiness_item_tv_receivingaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:ellipsize="marquee"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/ReceivingAddress"
            android:textColor="@color/Title_Color"
            android:textSize="@dimen/sp16"
            app:layout_constraintTop_toBottomOf="@id/adapter_activityselectbusiness_item_tv_deliveryaddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
