<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_activity_login"
    tools:ignore="MissingConstraints">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ContentDescription">

            <Button
                android:id="@+id/activity_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp40"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@drawable/login_btn_select"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20"
                app:layout_constraintTop_toBottomOf="@id/activity_login_password_cl" />

            <ImageView
                android:id="@+id/activity_login_iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp14"
                android:layout_marginTop="@dimen/dp100"
                android:background="@mipmap/logo_activity_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/activity_login_tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp63"
                android:text="@string/welcome"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp20"
                app:layout_constraintLeft_toLeftOf="@id/activity_login_iv_logo"
                app:layout_constraintTop_toBottomOf="@id/activity_login_iv_logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_login_password_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/activity_login_account_cl">

                <Button
                    android:id="@+id/activity_login_password_btn_delete"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:background="@drawable/login_delete_button_shape"
                    android:paddingStart="@dimen/dp10"
                    android:paddingEnd="@dimen/dp10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/activity_login_password_btn_see"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/activity_login_password_btn_see"
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp20"
                    android:background="@drawable/login_see_button_shape"
                    android:paddingStart="@dimen/dp10"
                    android:paddingEnd="@dimen/dp10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/activity_login_password_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp14"
                    android:src="@mipmap/activity_login_pas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_login_password_tl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp40"
                    android:textColorHint="@color/login_btn_default"
                    app:layout_constraintLeft_toRightOf="@id/activity_login_password_logo"
                    app:layout_constraintRight_toLeftOf="@id/activity_login_password_btn_delete"
                    tools:ignore="MissingConstraints">

                    <EditText
                        android:id="@+id/activity_login_password_tl_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputpassword"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/dp20"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_login_account_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp60"
                android:layout_marginEnd="@dimen/dp10"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/activity_login_tv_welcome">

                <Button
                    android:id="@+id/activity_login_account_btn_delete"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:background="@drawable/login_delete_button_shape"
                    android:padding="@dimen/dp10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/activity_login_account_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp14"
                    android:src="@mipmap/activity_login_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp40"
                    android:textColorHint="@color/login_btn_default"
                    app:layout_constraintLeft_toRightOf="@id/activity_login_account_logo"
                    app:layout_constraintRight_toLeftOf="@id/activity_login_account_btn_delete">

                    <AutoCompleteTextView
                        android:id="@+id/activity_login_actv_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputaccount"
                        android:maxLines="1"
                        android:padding="@dimen/dp20"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp14" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                layout="@layout/layout_common_title"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
